--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ body {
 
 #interface {
   display: flex;
+  flex-direction: column;
   background-color: white;
   width: 100%;
   max-width: 1200px;
@@ -37,6 +38,7 @@ body {
   font-size: 17px;
   margin-right: 10px;
   padding: 10px;
+  cursor: pointer;
 }
 
 #navigation-menu button:hover {
@@ -85,17 +87,54 @@ body {
 
 #category-link {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .links {
   min-width: 300px;
-  width: 30%;
+  width: 32%;
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
+  align-content: center;
   margin-top: 25px;
+}
+
+.links img {
+  height: 350px;
+  overflow: hidden;
+  object-fit: cover;
+  object-position: center;
+  margin: 10px;
+}
+
+.links h3 {
+  margin-bottom: 15px;
+}
+
+.links p {
+  margin: 10px;
+  height: 180px;
+  text-align: justify;
+  text-indent: 1.5em;
+}
+
+.links button {
+  width: 150px;
+  height: 30px;
+  margin: 0 auto;
+  border-radius: 3px;
+  border: 2px solid rgb(171, 171, 171);
+  background-color: rgb(218, 217, 217);
+  box-shadow: 0 0 4px 0.8px rgb(159, 159, 159);
+  cursor: pointer;
+}
+
+.links button:hover {
+  box-shadow: 0 0 4px 1px rgb(229, 152, 152);
 }
 
 #footer {
