item view added

--- a/public/style.css
+++ b/public/style.css
@@ -160,3 +160,31 @@ body {
   text-align: center;
   margin-top: 30px;
 }
+
+#dep-container {
+  max-width: 1200px;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+}
+
+#dep-container div {
+  width: 24%;
+  min-width: 260px;
+  display: flex;
+  flex-direction: column;
+}
+
+#dep-container div img {
+  width: 100%;
+}
+
+#item-element {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+#item-element ul li {
+  list-style: none;
+}
